change eureka server default port 8761 to 8888

--- a/apigateway/src/main/resources/config/application.yml
+++ b/apigateway/src/main/resources/config/application.yml
@@ -16,6 +16,10 @@ spring:
             - Path=/contact/**
 server:
   port: 8999
+
 eureka:
-  instance:
-    hostname: localhost
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8888/eureka/
