--- a/contact_service/src/main/resources/config/application.yml
+++ b/contact_service/src/main/resources/config/application.yml
@@ -7,5 +7,8 @@ server:
    port: 9002
   
 eureka:
-   instance:
-      hostname: localhost
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8888/eureka/      
